# rearview

./: Cargo.toml  DEV_SETUP.md  GSTREAMER_PIPELINE_EXPLAINED.md  MJPEGView.swift  POWER_MANAGEMENT.md  README.md  RPI_LIBCAMERA.md  SETUP_FROM_SCRATCH.md  VIDEO_ENCODING.md  build.rs  check_h264_stream.py  debug_h264_stream.py  display_h264_over_tcp.py  install.sh  video_encoding_advanced.md
.github/workflows/: cross-compile-armv7.yml
aluminum-cnc-plate/: README.md  Velovision Rear Cam a1.step
hardware/aluminum-cnc-plate/: Velovision Rearcam Alu Plate a1.dwg
hardware/io-board-v1.3/: README.md
hardware/io-board-v1.3/load_into_easyeda/: 1-PCB_PCB-velovision-rearview-1.3.json  1-Schematic_velovision rearview 1.3.json
hardware/io-board-v1.3/manufacturing_files/: BOM.csv  PickAndPlace.csv
src/: .standalone_filesystem.rs.swp  cpu_temp.rs  fuel_gauge.rs  gpio_control.rs  led_control.rs  main.rs  standalone_filesystem.rs  tcp_stream_monitor.rs
supreme-server/: Cargo.toml  README.md  build.rs
supreme-server/src/: gstreamer_monitor.rs  main.rs
systemd/: standalone_gstreamer.sh  velovision-standalone-mode.service  velovision-supreme-server.service
systemd-services/: camera-mjpeg-over-tcp.service
velovision-pi-cam/: Cargo.toml
velovision-pi-cam/src/: functionality_sketches.rs  main.rs
