[package]
name = "supreme-server"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
rppal = "0.14.1"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
system_shutdown = "4.0.1"
systemctl = "0.3.0"
tiny_http = "0.12.0"
